  Sep 4, 2009     - Fix BZ 378 - Segfaults can happen when cutting down the
                    Y parameters of a g2d spectrum to generate the title.

pre4: 
  October 11, 2009 - BZ 379 when SpecTcl started using double for parameters
                    in an event, filters broke.  The fix allows both filters
                    from older and current versions of SpecTcl to be read.
  October 14, 2009 - Strip chart spectrum was miscalculateing m_nOffset on
                     shifts to the left leaving gaps in the spectra for
                     continuously varying parameters.
  December 4, 2009 - Fix error in XMWarningDialog::Create .. was referencing
                     button objects prior to ensuring they were created.
  December 4, 2009 - BZ384 - Provide some fallback fonts in case the adobe-courier
                     family is not present.
                     BZ384 - Provide a const char* exception handler in main()
                             when caught displays a modal warning box with the
                             exception displayed and when dismissed exits Xamine.
                           - Throw an appropriate const char* exception when
                             no suitable fonts can be found in text.cc:LoadFonts

February 2, 2010  - Export CRingBufferDecoder.h to the world rather than
                    hiding it in noinst_HEADERS.
Feburary 11, 2010 - Modify data source GUI elements to include a data
                    format selector that includes support for ring so people
                    can attach to ring buffers or event files from the ring
                    buffer system.                      

pre6:
May 6, 2010 - Fold in KSU fix for tkcon problems on ubuntu 10.??
May 6, 2010 - Update to gri-2.12.20
May 14, 2010- Remove memswap usage in CIntegrateCommand.cpp.
            - Remove all -lpub's from Makefile.am and includes.
            - Fix buffer overflow (BZ 404) in griprint.c