@@ -903,3 +903,6 @@ May 6, 2010 - Update to gri-2.12.20
 May 14, 2010- Remove memswap usage in CIntegrateCommand.cpp.
             - Remove all -lpub's from Makefile.am and includes.
             - Fix buffer overflow (BZ 404) in griprint.c
+pre7:
+May 18, 2010 - Fix error in GUI spectrum usage calculation. Was under
+              calcluating summary spectrum usage.
